# MatrixMultiplication_OpenMPI

./: CMakeLists.txt  MatrixMultiplication_20170077.c
